--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           set -euo pipefail
 
           # run tests and collect coverage (XPlat collector)
-          __dotnet test__ ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build --collect:"XPlat Code Coverage"
+          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build --collect:"XPlat Code Coverage"
 
           # locate cobertura file produced by collector
           COV_FILE=$(find "$(pwd)" -type f -path "*/TestResults/*/coverage.cobertura.xml" -print -quit || true)
@@ -79,7 +79,7 @@ jobs:
           set -euo pipefail
 
           # run benchmark project (BenchmarkDotNet produces JSON under BenchmarkDotNet.Artifacts)
-          __dotnet run__ -c Release -p benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj --no-build || true
+          dotnet run -c Release -p benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj --no-build || true
 
           # locate the latest results JSON
           RESULT_JSON=$(find . -type f -name "*.json" -path "*/BenchmarkDotNet.Artifacts/*/results/*.json" -print0 | xargs -0 ls -t 2>/dev/null | head -n1 || true)
