--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,15 @@ name: CI - Build, Test, Coverage & Benchmarks
 on:
   push:
     branches:
-      - '**'
+      - "**"
 
 env:
-  COVERAGE_THRESHOLD: '75'   # percent
-  PERF_THRESHOLD: '10'       # percent allowed regression
+  COVERAGE_THRESHOLD: "75" # percent
+  PERF_THRESHOLD: "10" # percent allowed regression
 
 jobs:
   matrix-ci:
-    name: Build on ${{ matrix.os }} — tests & benchmarks on Linux
+    name: Build on ${{ matrix.os }} ï¿½ tests & benchmarks on Linux
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET 9
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: "9.0.x"
 
       - name: Restore
         run: dotnet restore
@@ -39,16 +39,23 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           set -euo pipefail
-          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release \
-            /p:CollectCoverage=true \
-            /p:CoverletOutput=coverage/ \
-            /p:CoverletOutputFormat=cobertura
-          if [ ! -d coverage ] || [ -z "$(ls -A coverage 2>/dev/null)" ]; then
-            echo "coverage file not produced; listing TestResults and coverage dir:"
-            find . -type d -name "TestResults" -print -exec ls -la {} \; || true
-            find coverage -maxdepth 2 -type f -print || true
+
+          # Build and run tests with the XPlat collector (coverlet.collector)
+          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build --collect:"XPlat Code Coverage" -v diag
+
+          # show TestResults tree and any coverage files created
+          echo "=== TestResults tree ==="
+          find . -type d -name "TestResults" -print -exec ls -la {} \; || true
+
+          # find cobertura file(s)
+          COV_FILE=$(find . -type f -name "coverage.cobertura.xml" -print -quit || true)
+          if [ -z "$COV_FILE" ]; then
+            echo "Coverage file not found after XPlat collector run. Inspect the log above for 'Data collector' messages."
             exit 2
           fi
+
+          mkdir -p coverage
+          cp "$COV_FILE" coverage/coverage.cobertura.xml
         shell: bash
 
       # -- Benchmark run: Linux only -----------------------------------------
