--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,7 +25,8 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.9" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
+    <!-- Use a valid coverlet.msbuild version -->
+    <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
