--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,23 +39,17 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           set -euo pipefail
+          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release \
+            /p:CollectCoverage=true \
+            /p:CoverletOutput=coverage/coverage.cobertura.xml \
+            /p:CoverletOutputFormat=cobertura
 
-          # Build and run tests with the XPlat collector (coverlet.collector)
-          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build --collect:"XPlat Code Coverage" -v diag
-
-          # show TestResults tree and any coverage files created
-          echo "=== TestResults tree ==="
-          find . -type d -name "TestResults" -print -exec ls -la {} \; || true
-
-          # find cobertura file(s)
-          COV_FILE=$(find . -type f -name "coverage.cobertura.xml" -print -quit || true)
-          if [ -z "$COV_FILE" ]; then
-            echo "Coverage file not found after XPlat collector run. Inspect the log above for 'Data collector' messages."
+          if [ ! -f coverage/coverage.cobertura.xml ]; then
+            echo "coverage file not produced; listing TestResults and coverage dir:"
+            find . -type d -name "TestResults" -print -exec ls -la {} \; || true
+            ls -la coverage || true
             exit 2
           fi
-
-          mkdir -p coverage
-          cp "$COV_FILE" coverage/coverage.cobertura.xml
         shell: bash
 
       # -- Benchmark run: Linux only -----------------------------------------
