do not push launchSettings to all developers!

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           set -euo pipefail
-          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release  -- \
+          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build  -- \
             --coverage \
             --coverage-output-format xml \
             --coverage-output coverage/coverage.cobertura.xml
@@ -80,7 +80,8 @@ jobs:
           set -euo pipefail
 
           # run benchmark project (BenchmarkDotNet produces JSON under BenchmarkDotNet.Artifacts)
-          dotnet run -c Release -p benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj --no-build || true
+          dotnet run -c Release --project benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj \
+            --no-build --memory --filter * --exporters JSON || true
 
           # locate the latest results JSON
           RESULT_JSON=$(find . -type f -name "*.json" -path "*/BenchmarkDotNet.Artifacts/*/results/*.json" -print0 | xargs -0 ls -t 2>/dev/null | head -n1 || true)
