--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,63 +1,67 @@
 <Project>
-  <PropertyGroup>
-    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageVersion Include="System.Collections" Version="4.3.0" />
-    <PackageVersion Include="System.Collections.Immutable" Version="9.0.9" />
-    <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-    <PackageVersion Include="System.Configuration.ConfigurationManager" Version="9.0.9" />
-    <PackageVersion Include="System.Memory" Version="4.6.3" />
-    <PackageVersion Include="System.Security.AccessControl" Version="6.0.1" />
-    <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="9.0.8" />
-    <PackageVersion Include="System.ServiceModel.Primitives" Version="8.1.2" />
-    <PackageVersion Include="System.Text.Json" Version="9.0.9" />
-    <!--<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>-->
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Data.Sqlite.Core" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Analyzers" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <!-- Use a valid coverlet.msbuild version -->
-    <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
-    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageVersion>
-    <!--<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All"/>-->
-    <PackageVersion Include="OpenTelemetry" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
-    <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.2" />
-    <PackageVersion Include="FluentValidation" Version="12.0.0" />
-    <PackageVersion Include="JsonSchema.Net" Version="7.4.0" Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
-    <PackageVersion Include="Newtonsoft.Json.Schema" Version="4.0.1" Condition="!$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
-    <PackageVersion Include="LibGit2Sharp" Version="0.31.0" />
-    <PackageVersion Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
-    <!-- The test stack: -->
-    <PackageVersion Include="NSubstitute" Version="5.3.0" />
-    <PackageVersion Include="FluentAssertions" Version="8.6.0" />
-    <PackageVersion Include="xunit.v3" Version="3.0.1" />
-    <PackageVersion Include="xunit.v3.extensibility.core" Version="3.0.1" />
-    <!-- xunit.v3.assert.source -->
-    <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.14.2" />
-<!--    <PackageVersion Include="coverlet.collector" Version="6.0.4">
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageVersion Include="System.Collections" Version="4.3.0" />
+        <PackageVersion Include="System.Collections.Immutable" Version="9.0.9" />
+        <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+        <PackageVersion Include="System.Configuration.ConfigurationManager" Version="9.0.9" />
+        <PackageVersion Include="System.Memory" Version="4.6.3" />
+        <PackageVersion Include="System.Security.AccessControl" Version="6.0.1" />
+        <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="9.0.8" />
+        <PackageVersion Include="System.ServiceModel.Primitives" Version="8.1.2" />
+        <PackageVersion Include="System.Text.Json" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+        <PackageVersion Include="Microsoft.Data.Sqlite.Core" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Analyzers" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions"
+            Version="9.0.9" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+        <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageVersion>
+        <PackageVersion Include="OpenTelemetry" Version="1.12.0" />
+        <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.12.0" />
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore"
+            Version="1.12.0-beta.2" />
+        <PackageVersion Include="FluentValidation" Version="12.0.0" />
+        <PackageVersion Include="JsonSchema.Net" Version="7.4.0"
+            Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
+        <PackageVersion Include="Newtonsoft.Json.Schema" Version="4.0.1"
+            Condition="!$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
+        <PackageVersion Include="LibGit2Sharp" Version="0.31.0" />
+        <PackageVersion Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
+        <!-- The test stack: -->
+        <PackageVersion Include="NSubstitute" Version="5.3.0" />
+        <PackageVersion Include="FluentAssertions" Version="8.6.0" />
+        <PackageVersion Include="xunit.v3" Version="3.0.1" />
+        <!-- <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.1" /> -->
+        <PackageVersion Include="xunit.v3.extensibility.core" Version="3.0.1" />
+        <!-- xunit.v3.assert.source -->
+        <PackageVersion Include="Microsoft.Testing.Extensions.CodeCoverage" Version="17.14.2" />
+        <!--
+    <PackageVersion Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>-->
-    <!-- BenchmarkDotNet -->
-    <PackageVersion Include="Microsoft.VisualStudio.DiagnosticsHub.BenchmarkDotNetDiagnosers" Version="18.0.36421.1" />
-    <PackageVersion Include="BenchmarkDotNet" Version="0.15.2" />
-    <PackageVersion Include="BenchmarkDotNet.Annotations" Version="0.15.2" />
-    <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotMemory" Version="0.15.2" />
-    <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotTrace" Version="0.15.2" />
-    <PackageVersion Include="BenchmarkDotNet.TestAdapter" Version="0.15.2" />
-  </ItemGroup>
+        <!-- BenchmarkDotNet -->
+        <PackageVersion Include="Microsoft.VisualStudio.DiagnosticsHub.BenchmarkDotNetDiagnosers"
+            Version="18.0.36421.1" />
+        <PackageVersion Include="BenchmarkDotNet" Version="0.15.2" />
+        <PackageVersion Include="BenchmarkDotNet.Annotations" Version="0.15.2" />
+        <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotMemory" Version="0.15.2" />
+        <PackageVersion Include="BenchmarkDotNet.Diagnostics.dotTrace" Version="0.15.2" />
+        <PackageVersion Include="BenchmarkDotNet.TestAdapter" Version="0.15.2" />
+    </ItemGroup>
 </Project>
