dotnet test /p:ExcludeByAttribute="GeneratedCodeAttribute"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest] # , windows-latest, macos-latest]
 
     steps:
       - name: Checkout
@@ -41,7 +41,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           set -euo pipefail
-          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build  -- \
+          dotnet test ./test/UlidType.Tests/UlidType.Tests.csproj -c Release --no-build \
+            /p:ExcludeByAttribute="GeneratedCodeAttribute"
+            -- \
             --coverage \
             --coverage-output-format xml \
             --coverage-output coverage/coverage.cobertura.xml
