--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,7 +13,6 @@
         <PackageVersion Include="System.Security.Cryptography.Pkcs" Version="9.0.8" />
         <PackageVersion Include="System.ServiceModel.Primitives" Version="8.1.2" />
         <PackageVersion Include="System.Text.Json" Version="9.0.9" />
-        <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
         <PackageVersion Include="Microsoft.Data.Sqlite.Core" Version="9.0.9" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.9" />
@@ -22,9 +21,10 @@
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Analyzers" Version="9.0.9" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.9" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions"
-            Version="9.0.9" />
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
         <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+        <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+        <PackageVersion Include="MinVer" Version="5.0.0" />
         <PackageVersion Include="coverlet.msbuild" Version="3.1.2" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -33,13 +33,10 @@
         <PackageVersion Include="OpenTelemetry" Version="1.12.0" />
         <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.12.0" />
         <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore"
-            Version="1.12.0-beta.2" />
+        <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.2" />
         <PackageVersion Include="FluentValidation" Version="12.0.0" />
-        <PackageVersion Include="JsonSchema.Net" Version="7.4.0"
-            Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
-        <PackageVersion Include="Newtonsoft.Json.Schema" Version="4.0.1"
-            Condition="!$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
+        <PackageVersion Include="JsonSchema.Net" Version="7.4.0" Condition="$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
+        <PackageVersion Include="Newtonsoft.Json.Schema" Version="4.0.1" Condition="!$([System.Text.RegularExpressions.Regex]::IsMatch($(DefineConstants), '^(.*;)*JSON_SCHEMA(;.*)*$'))" />
         <PackageVersion Include="LibGit2Sharp" Version="0.31.0" />
         <PackageVersion Include="SQLitePCLRaw.bundle_e_sqlcipher" Version="2.1.11" />
         <!-- The test stack: -->
