Add CHANGELOG, release process, and MinVer integration
Introduced a `CHANGELOG.md` file to document all notable changes, adhering to the Keep a Changelog format and Semantic Versioning. Added an initial baseline release entry (`v0.1.0`) and guidance for maintaining the changelog.

Added a `ReleaseProcess.md` file to document versioning, prerelease automation, and stable publishing workflows. This includes details on MinVer usage, automated prerelease tagging, manual stable release steps, and troubleshooting.

Updated `Directory.Build.props` to simplify MinVer configuration. Updated `Directory.Packages.props` to reorganize and re-add central package version declarations, including updating `MinVer` to `6.0.0` and `BenchmarkDotNet` to `0.15.3`.

Updated project files to include `PackageReference` for `MinVer` with `PrivateAssets` and `IncludeAssets` settings for deterministic builds. Added `CHANGELOG.md` and `ReleaseProcess.md` to the solution file for better visibility.

Added automation for prerelease tagging and publishing, including workflows for automated prerelease creation on `main` branch merges and documentation for manual stable releases.

Improved documentation for local builds, version inspection, and troubleshooting MinVer-related issues. Enhanced `CHANGELOG.md` and `ReleaseProcess.md` with categorization guidance, usage notes, and a summary cheat sheet for common actions.

These changes improve the project's maintainability, transparency, and readiness for both prerelease and stable publishing.

--- a/test/UlidType.Tests/UlidType.Tests.csproj
+++ b/test/UlidType.Tests/UlidType.Tests.csproj
@@ -14,6 +14,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Update="MinVer">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Update="xunit.runner.visualstudio">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
