--- a/benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj
+++ b/benchmarks/UlidType.Benchmarks/UlidType.Benchmarks.csproj
@@ -7,4 +7,11 @@
       <ProjectReference Include="..\..\src\UlidType\UlidType.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="MinVer">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
