--- a/examples/GenerateUlids/GenerateUlids.csproj
+++ b/examples/GenerateUlids/GenerateUlids.csproj
@@ -8,4 +8,11 @@
     <ProjectReference Include="..\..\src\UlidType\UlidType.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="MinVer">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
