[skip ci] Address AI comments.

--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -6,12 +6,12 @@
 
   <PropertyGroup Label="NuGet">
     <Title>vm2.ULID</Title>
-    <Description>Implementation of the Universaly Unique Lexicographically Sortable Identifier
+    <Description>Implementation of the Universally Unique Lexicographically Sortable Identifier
       (ULID) for .NET.</Description>
     <PackageReleaseNotes>Initial version of the vm2.Ulid.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
     <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
-    <PackageTags>ULID Universaly Unique Lexicographically Sortable Identifier .net core vm2</PackageTags>
+    <PackageTags>ULID Universally Unique Lexicographically Sortable Identifier .net core vm2</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
