--- a/src/UlidType/UlidType.csproj
+++ b/src/UlidType/UlidType.csproj
@@ -6,8 +6,10 @@
 
   <PropertyGroup Label="NuGet">
     <Title>vm2.ULID</Title>
-    <Description>Implementation of the Universally Unique Lexicographically Sortable Identifier
-      (ULID) for .NET.</Description>
+    <Description>
+        Implementation of the Universally Unique Lexicographically Sortable Identifier (ULID) for .NET.
+    </Description>
+    <PackageId>vm2.ULID</PackageId>
     <PackageReleaseNotes>Initial version of the vm2.Ulid.</PackageReleaseNotes>
     <RepositoryUrl>https://github.com/vmelamed/vm2.Ulid</RepositoryUrl>
     <PackageProjectUrl>https://github.com/vmelamed/vm2.Ulid/blob/main/src/UlidType/UlidType.csproj</PackageProjectUrl>
